--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="meal_error">오류가 발생하였습니다. 앱을 재시작 하거나 설정에서 새로고침을 해보시기 바랍니다.</string>
     <string name="event_need_download">학사일정 정보 다운로드가 필요합니다.\n설정 메뉴를 통하여 다운로드 하실 수 있습니다.</string>
     <string name="event_non_exist">학사일정이 없습니다.</string>
+
+    <string name="notice">알림</string>
+    <string name="warning">경고</string>
+    <string name="error">오류</string>
 </resources>
