--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
     <string name="app_name">동천 알리미</string>
-    <string name="meal_need_download">급식 정보 다운로드가 필요헙나다.\n설정 메뉴에서 다운로드 하실 수 있습니다.</string>
+
+    <string name="meal_need_download">이번달 급식 정보 다운로드가 필요합니다.\n설정 메뉴에서 다운로드 하실 수 있습니다.</string>
     <string name="meal_non_exist">급식정보가 없습니다.</string>
     <string name="meal_error">오류가 발생하였습니다. 앱을 재시작 하거나 설정에서 새로고침을 해보시기 바랍니다.</string>
-    <string name="event_need_download">학사일정 정보 다운로드가 필요합니다.\n설정 메뉴를 통하여 다운로드 하실 수 있습니다.</string>
+    <string name="event_need_download">이번달 학사일정 정보 다운로드가 필요합니다.\n설정 메뉴를 통하여 다운로드 하실 수 있습니다.</string>
     <string name="event_non_exist">학사일정이 없습니다.</string>
 
     <string name="notice">알림</string>
     <string name="warning">경고</string>
     <string name="error">오류</string>
+
+    <string name="meal">급식</string>
+    <string name="schedule">시간표</string>
+
+    <string name="d_day_title">%s까지</string>
+    <string name="d_day_left">D-%d</string>
 </resources>
