--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="warning">경고</string>
     <string name="error">오류</string>
 
+    <string name="d_day">D-DAY</string>
     <string name="meal">급식</string>
     <string name="schedule">시간표</string>
 
