--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="event_need_download">이번달 학사일정 정보 다운로드가 필요합니다.\n설정 메뉴를 통하여 다운로드 하실 수 있습니다.</string>
     <string name="event_non_exist">학사일정이 없습니다.</string>
 
-    <string name="downloading_d_day_info">D-DAY 정보 다운로드 중…</string>
-    <string name="downloading_meal_info">급식 정보 다운로드 중…</string>
-    <string name="downloading_event_info">학사일정 정보 다운로드 중…</string>
+    <string name="downloading_d_day_list">D-DAY 정보 가져오는 중…</string>
+    <string name="downloading_school_meal_list">급식 정보 가져오는 중…</string>
+    <string name="downloading_school_event_list">학사일정 정보 가져오는 중…</string>
+    <string name="downloading_class_total_number">학반 정보 가져오는 중…</string>
 
     <string name="download_successfully">다운로드가 성공적으로 완료되었습니다.</string>
     <string name="download_failed">다운로드 중 오류가 발생하였습니다.\n네트워크 상태 확인 후 다시 시도해주세요.</string>
